--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: ylicense
-version: '0.9.0'
+version: '0.9.1'
 author: Yakamara Media GmbH & Co. KG
 supportpage: https://github.com/yakamara/ylicense
 
@@ -21,7 +21,7 @@ page:
 requires:
     redaxo: '^5.5'
     php:
-        version: '>=5.6' # benötigt mindestens PHP 5.6
+        version: '>=7.1'
 
 console_commands:
     ylicense:list: list_short
