--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "yakamara/ylicense",
+  "name": "friendsofredaxo/license",
   "description": "License Check Addon for Redaxo 5",
-  "homepage": "https://github.com/yakamara/redaxo_ylicense",
+  "homepage": "https://github.com/friendsofredaxo/license",
   "version": "0.9.0",
   "authors": [
   {
