--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
-package: ylicense
+package: license
 version: '0.9.6'
-author: Yakamara Media GmbH & Co. KG
-supportpage: https://github.com/yakamara/ylicense
+author: FriendsOfREDAXO, Yakamara Media GmbH & Co. KG
+supportpage: https://github.com/friendsofredaxo/license
 
 page:
     title: 'translate:title'
@@ -25,5 +25,5 @@ requires:
         version: '>=7.4'
 
 console_commands:
-    ylicense:list: list_short
-    ylicense:list-full: list_full
+    license:list: list_short
+    license:list-full: list_full
