run composer, version bump, remove changelog.md

--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: license
-version: '0.9.6'
+version: '1.0.0-beta1'
 author: FriendsOfREDAXO, Yakamara Media GmbH & Co. KG
 supportpage: https://github.com/friendsofredaxo/license
 
