--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: license
-version: '1.0.0-beta1'
+version: '1.0.0'
 author: FriendsOfREDAXO, Yakamara Media GmbH & Co. KG
 supportpage: https://github.com/friendsofredaxo/license
 
