--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 package: license
 version: '1.0.0'
-author: FriendsOfREDAXO, Yakamara Media GmbH & Co. KG
+author: FriendsOfREDAXO
 supportpage: https://github.com/friendsofredaxo/license
 
 page:
